--- a/SpaceSim/SpaceSim.vcxproj.filters
+++ b/SpaceSim/SpaceSim.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sector.h">
@@ -44,7 +47,16 @@
     <ClInclude Include="Galaxy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="includes.h">
+    <ClInclude Include="StarCluster.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Vectors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MathStuff.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
